--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "$schema": "https://www.schemastore.org/package.json",
   "name": "ts-md-html",
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "test": "vitest"
+  },
   "devDependencies": {
     "@types/bun": "latest",
-    "vitest": "^3.2.4"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+    "vitest": "^3.2.4",
+    "typescript": "^5.8.3"
   }
 }
