--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://www.schemastore.org/tsconfig.json",
   "compilerOptions": {
+    "types": [
+      "vitest/globals"
+    ],
     // Environment setup & latest features
     "lib": [
       "ESNext"
@@ -8,7 +11,6 @@
     "target": "ESNext",
     "module": "Preserve",
     "moduleDetection": "force",
-    "jsx": "react-jsx",
     "allowJs": true,
     // Bundler mode
     "moduleResolution": "bundler",
@@ -27,6 +29,8 @@
     "noPropertyAccessFromIndexSignature": false
   },
   "include": [
-    "./src"
+    "./index.ts",
+    "./src",
+    "./tests"
   ]
 }
