chore: vitest types and globals

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "vitest": "^3.2.4",
-    "typescript": "^5.8.3"
+    "@types/bun": "^1.2.19",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
