--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "$schema": "https://www.schemastore.org/tsconfig.json",
   "compilerOptions": {
     "types": [
-      "vitest/globals"
+      "vitest/globals",
+      "bun"
     ],
     // Environment setup & latest features
     "lib": [
@@ -29,7 +30,7 @@
     "noPropertyAccessFromIndexSignature": false
   },
   "include": [
-    "./index.ts",
+    "./*.ts",
     "./src",
     "./tests"
   ]
